2002-03-29  Han-Wen  <hanwen@cs.uu.nl>

	* input/regression/spacing-note-flags.ly: new file

	* input/regression/spacing-rest.ly: new file

	* mf/feta-eindelijk.mf: make bbox of quarter rest tighter.

	* lily/spacing-spanner.cc (note_spacing): make note spacing after
	all grace notes tight (not only the column directly following a
	grace note).

	* scm/grob-description.scm (all-grob-descriptions): don't make
	mm-rests larger than normal.

	* mf/feta-banier.mf: make upflag narrower. Make end of flag more
	curved. Remove white space at the right of flags.

2002-03-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* ports/ports.make: Bugfix: ignore CVS directories.

	* stepmake/.cvsignore: New file.

2002-03-28  Han-Wen  <hanwen@cs.uu.nl>

	* lily/note-spacing.cc (stem_dir_correction): don't correct when
	there is a flag on the stem.

	* lily/multi-measure-rest.cc (brew_molecule): variable width molecule.

	* scm/grob-property-description.scm (measure-length):
	measure-length grob property.

	* lily/spacing-spanner.cc (standard_breakable_column_spacing):
	better spacing for breakable columns when they're juxtaposed: use
	measure length if applicable

	* lily/timing-engraver.cc (start_translation_timestep): store
	measure length in breakable column at start of measure.

2002-03-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* ROADMAP: Add description for ports dir, to check email upon
	commit.

2002-03-27  Han-Wen  <hanwen@cs.uu.nl>

	* VERSION: 1.5.48 released
	
	* lily/multi-measure-rest.cc (symbol_molecule): split off from
	brew_molecule()
	(set_spacing_rods): Use symbol_molecule() to determine minimum
	width
	(church_rest): split off from brew_molecule()
	(big_rest): split off from brew_molecule(). Construct using
	variable shape.
	
	* mf/feta-eindelijk.mf: junk multi measure rest.

2002-03-26  Han-Wen  <hanwen@cs.uu.nl>

	* lily/multi-measure-rest.cc (add_column): remove columns property.

	* lily/dynamic-engraver.cc (process_music): add more verbose warning
